# FundMate

./: .gitignore  BATCH_UPLOAD_GUIDE.md  CLAUDE.md  QUICKSTART_WEB.md  QUICK_START_BATCH.md  README.md  README_cn.md  UPLOAD_DEMO.md  WEB_README.md  WEB_UPLOAD_GUIDE.md  environment.yml  fundmate_architecture.md  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements-web.txt  run_web.sh  web_app.py
docs/: DEV.md
src/: __init__.py  broker_processor.py  config.py  data_persistence.py  enums.py  excel_parser.py  exchange_rate_handler.py  hk_option_price_helper.py  image_processor.py  llm_handler.py  main.py  option_parser.py  pdf_converter.py  pdf_processor.py  position.py  price_fetcher.py  prompt_templates.py  stock_price_fetcher.py  trade_confirmation_processor.py  us_option_price_helper.py  utils.py
src/webapp/: __init__.py  app.py
src/webapp/static/css/: style.css
test/: README.md  __init__.py  conftest.py  run_tests.sh
test/e2e/: __init__.py  expected_results.json  test_0228_full.py  test_0630_full.py  test_cross_broker.py  test_tc_mode.py
test/fixtures/tc_base/2025-07-18/: cash_summary_2025-07-18.parquet  metadata_2025-07-18.json  positions_2025-07-18.parquet
test/fixtures/tc_expected/: portfolio_details_2025-07-22.csv
test/unit/: test_exchange_rate.py  test_utils.py
tools/futu/: FTWebSocket
web/static/js/: main.js
web/templates/: about.html  base.html  cash.html  compare.html  dashboard.html  error.html  no_data.html  positions.html  upload.html
