[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fundmate"
version = "0.0.1"
description = "Financial broker statement processor and trade-confirmation updater."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "langchain>=0.1",
    "langchain-openai>=0.0.8",
    "langchain-google-genai>=0.0.6",
    "loguru>=0.7",
    "pandas>=2.0.0",
    "pdf2image>=1.17",
    "pdfplumber>=0.10",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"src.webapp" = ["templates/**/*.html", "templates/**/*.jinja", "static/**/*"]

[project.optional-dependencies]
web = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.1",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
]
